fix menu spacing

--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -19,7 +19,7 @@
   li {
     margin: 0 2.3rem 0 0rem;
     display: block;
-    padding: 5px;
+    padding: 5px 5px 0 0;
   }
   li:not(.logo-container){
     a{
